@@ -1,3 +1,9 @@
+2006-11-03  Steven Munroe  <sjmunroe@us.ibm.com>
+
+	* sysdeps/powerpc/fpu/bits/mathinline.h
+	[__LIBC_INTERNAL_MATH_INLINES]: Moved to ...
+	* sysdeps/powerpc/fpu/math_private.h: ...here.  New file.
+
 2006-11-05  Ulrich Drepper  <drepper@redhat.com>
 
 	* sysdeps/unix/sysv/linux/i386/sysconf.c (intel_check_word):
